--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "typescript": "^1.3.0",
     "mocha": "^2.1.0",
     "tslint": "^1.2.0",
-    "multi-glob": "^0.4.0"
+    "multi-glob": "^0.4.0",
+    "parallelshell": "^1.0.4"
   },
   "dependencies": {
     "minimatch": "^2.0.1",
-    "yargs": "^1.3.3"
+    "yargs": "^1.3.3",
+    "express": "^4.11.1",
+    "ws": "^0.7.1"
   },
   "tslintConfig": "tslint.json"
 }
