build: Fix building on Windows (workaround for globs).

--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "mocha": "mocha -R spec dist/test/",
     "start": "node dist/src/server.js",
     "lint": "node support/tslint_wrapper.js src/*.ts test/*.ts",
-    "build:src": "tsc @tsc.options.txt --outDir dist/src/ src/*.ts",
-    "watch:src": "tsc @tsc.options.txt --outDir dist/src/ src/*.ts --watch",
-    "build:test": "tsc @tsc.options.txt --outDir dist/test/ test/*.ts",
-    "watch:test": "tsc @tsc.options.txt --outDir dist/test/ test/*.ts --watch",
+    "build:src": "node support/deglob.js tsc @tsc.options.txt --outDir dist/src/ src/*.ts",
+    "watch:src": "node support/deglob.js tsc @tsc.options.txt --outDir dist/src/ src/*.ts --watch",
+    "build:test": "node support/deglob.js tsc @tsc.options.txt --outDir dist/test/ test/*.ts",
+    "watch:test": "node support/deglob.js tsc @tsc.options.txt --outDir dist/test/ test/*.ts --watch",
     "build": "npm run build:src && npm run build:test",
     "watch:start": "mkdir -p dist/src/ && touch dist/src/server.js && nodemon --delay 1 --watch dist/src/",
     "watch": "parallelshell 'npm run watch:src' 'npm run watch:test' 'npm run watch:start'",
