--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "author": "Martin Poelstra <martin@beryllium.net>",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^1.3.0",
+    "cross-spawn": "^0.2.3",
+    "glob": "^4.3.5",
     "mocha": "^2.1.0",
-    "tslint": "^1.2.0",
     "multi-glob": "^0.4.0",
-    "parallelshell": "^1.0.4"
+    "parallelshell": "^1.0.4",
+    "tslint": "^1.2.0",
+    "typescript": "^1.3.0"
   },
   "dependencies": {
     "minimatch": "^2.0.1",
