--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -14,12 +14,13 @@
         "./**/*.ts"
     ],
     "files": [
+        "./Logger.ts",
         "./MClient.ts",
         "./Message.ts",
         "./SocketHub.ts",
         "./client.ts",
         "./converter.ts",
-        "./debug.ts",
+        "./log.ts",
         "./overlay.ts",
         "./ping.ts",
         "./pubsub.ts",
