--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mserver",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "FLL Message Server",
   "main": "dist/src/server.js",
   "scripts": {
@@ -20,18 +20,18 @@
   "author": "Martin Poelstra <martin@beryllium.net>",
   "license": "MIT",
   "devDependencies": {
-    "cross-spawn": "^0.2.3",
-    "glob": "^4.3.5",
-    "mocha": "^2.1.0",
+    "cross-spawn": "^0.2.9",
+    "glob": "^5.0.5",
+    "mocha": "^2.2.4",
     "multi-glob": "^0.4.0",
-    "parallelshell": "^1.0.4",
-    "tslint": "^1.2.0",
-    "typescript": "^1.3.0"
+    "parallelshell": "^1.1.1",
+    "tslint": "^2.1.1",
+    "typescript": "^1.5.0-alpha"
   },
   "dependencies": {
-    "express": "^4.11.1",
-    "minimatch": "^2.0.1",
-    "node-uuid": "^1.4.2",
+    "express": "^4.12.3",
+    "minimatch": "^2.0.4",
+    "node-uuid": "^1.4.3",
     "ws": "^0.7.1",
     "yargs": "^1.3.3"
   },
