mping: Add executable wrapper, add count argument, errors on stderr.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./dist/src/index.js",
   "bin": {
     "mclient": "./bin/mclient",
+    "mping": "./bin/mping",
     "mserver": "./bin/mserver"
   },
   "scripts": {
