Rename to mhub to prevent conflict with existing mserver npm package, update Readme, prepare for npm publish.

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -20,6 +20,7 @@
         "./SocketHub.ts",
         "./client.ts",
         "./converter.ts",
+        "./index.ts",
         "./log.ts",
         "./overlay.ts",
         "./ping.ts",
