--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "mserver",
-  "version": "0.1.0",
-  "description": "FLL Message Server",
-  "main": "dist/src/server.js",
+  "name": "mhub",
+  "version": "0.2.0",
+  "description": "Simple, flexible message hub using websockets",
+  "main": "./dist/src/index.js",
   "bin": {
     "mclient": "./bin/mclient",
     "mserver": "./bin/mserver"
