--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -19,13 +19,10 @@
         "./Message.ts",
         "./SocketHub.ts",
         "./client.ts",
-        "./converter.ts",
         "./index.ts",
         "./log.ts",
-        "./overlay.ts",
         "./ping.ts",
         "./pubsub.ts",
-        "./server.ts",
-        "./twitter_pusher.ts"
+        "./server.ts"
     ]
 }
