--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "mocha": "mocha -R spec dist/test/",
     "start": "node ./mserver",
     "lint": "node support/tslint_wrapper.js src/*.ts test/*.ts",
-    "build:src": "cd src && tsc",
+    "build:src": "cd src && tsc && dts-generator --name mhub --baseDir . --out ../dist/mhub.d.ts --main mhub/index index.ts",
     "watch:src": "cd src && tsc --watch",
     "build:test": "cd test && tsc",
     "watch:test": "cd test && tsc --watch",
@@ -26,6 +26,7 @@
   "author": "Martin Poelstra <martin@beryllium.net>",
   "license": "MIT",
   "devDependencies": {
+    "dts-generator": "^1.3.1",
     "mocha": "^2.2.4",
     "multi-glob": "^0.4.0",
     "parallelshell": "^1.1.1",
@@ -38,5 +39,9 @@
     "ws": "^0.7.1",
     "yargs": "^1.3.3"
   },
+  "typescript": {
+    "definition": "./dist/mhub.d.ts"
+  },
+  "typings": "./dist/src/index.d.ts",
   "tslintConfig": "tslint.json"
 }
