Implement message ACKs, convert client API to (native) promises.

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,7 +7,7 @@
         "declaration": true,
         "noImplicitAny": true,
         "removeComments": false,
-        "noLib": false,
+        "noLib": true,
         "preserveConstEnums": true,
         "suppressImplicitAnyIndexErrors": true,
         "sourceMap": true,
