--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "mocha": "mocha -R spec dist/test/",
     "start": "node ./bin/mserver",
     "lint": "node support/tslint_wrapper.js src/*.ts test/*.ts",
-    "build:src": "tsc -p src/ && cd src && dts-generator --name mhub --baseDir . --out ../dist/mhub.d.ts --main mhub/index --es6 --es6default index.ts",
+    "build:src": "tsc -p src/",
     "watch:src": "tsc -p src/ --watch",
     "build:test": "tsc -p test/",
     "watch:test": "tsc -p test/ --watch",
@@ -37,7 +37,6 @@
   },
   "homepage": "https://github.com/poelstra/mhub#readme",
   "devDependencies": {
-    "dts-generator": "poelstra/dts-generator#6c96dfba98a467d76071fa67666474f760dab64f",
     "mocha": "^2.2.5",
     "multi-glob": "^0.4.0",
     "parallelshell": "^2.0.0",
@@ -49,9 +48,6 @@
     "minimatch": "^2.0.10",
     "ws": "^0.7.2",
     "yargs": "^1.3.3"
-  },
-  "typescript": {
-    "definition": "./dist/mhub.d.ts"
   },
   "typings": "./dist/src/index.d.ts",
   "tslintConfig": "tslint.json"
