--- a/package.json
+++ b/package.json
@@ -46,16 +46,16 @@
   },
   "homepage": "https://github.com/poelstra/mhub#readme",
   "devDependencies": {
-    "mocha": "^2.2.5",
+    "mocha": "^2.5.3",
     "parallelshell": "^2.0.0",
     "tslint": "^3.12.1",
-    "typescript": "~1.7.5"
+    "typescript": "^1.8.10"
   },
   "dependencies": {
-    "express": "^4.13.3",
-    "minimatch": "^2.0.10",
-    "ws": "^1.0.1",
-    "yargs": "^3.32.0"
+    "express": "^4.14.0",
+    "minimatch": "^3.0.2",
+    "ws": "^1.1.1",
+    "yargs": "^4.7.1"
   },
   "typings": "./dist/src/index.d.ts",
   "tslintConfig": "tslint.json"
