all: Add TLS support, add verbose option to mhub server config (default true).

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -29,7 +29,8 @@
         "./mhub-ping.ts",
         "./mhub-server.ts",
         "./pubsub.ts",
-        "./sockethub.ts"
+        "./sockethub.ts",
+        "./tls.ts"
     ],
     "atom": {
         "rewriteTsconfig": true
