server: Implement disk storage for Queue and TopicQueue.

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -37,6 +37,7 @@
         "./nodes/topicQueue.ts",
         "./pubsub.ts",
         "./sockethub.ts",
+        "./storage.ts",
         "./tls.ts",
         "./types.ts"
     ],
