--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "express": "^4.14.0",
     "minimatch": "^3.0.2",
+    "mkdirp": "^0.5.1",
     "source-map-support": "^0.4.1",
     "ws": "^1.1.1",
     "yargs": "^4.7.1"
