server: Rename TopicQueue to TopicState, better reflects its purpose.

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -34,7 +34,7 @@
         "./nodes/pingResponder.ts",
         "./nodes/queue.ts",
         "./nodes/testSource.ts",
-        "./nodes/topicQueue.ts",
+        "./nodes/topicState.ts",
         "./pubsub.ts",
         "./sockethub.ts",
         "./storage.ts",
