--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -35,6 +35,7 @@
         "./nodes/queue.ts",
         "./nodes/testSource.ts",
         "./nodes/topicState.ts",
+        "./protocol.ts",
         "./pubsub.ts",
         "./sockethub.ts",
         "./storage.ts",
