--- a/package.json
+++ b/package.json
@@ -46,17 +46,25 @@
   },
   "homepage": "https://github.com/poelstra/mhub#readme",
   "devDependencies": {
+    "@types/chai": "^3.4.34",
+    "@types/mocha": "^2.2.32",
     "mocha": "^2.5.3",
     "parallelshell": "^2.0.0",
     "tslint": "^3.12.1",
     "typescript": "^2.0.0"
   },
   "dependencies": {
+    "@types/express": "^4.0.33",
+    "@types/minimatch": "^2.0.29",
+    "@types/mkdirp": "^0.3.29",
+    "@types/node": "^6.0.45",
+    "@types/yargs": "0.0.33",
     "express": "^4.14.0",
     "minimatch": "^3.0.2",
     "mkdirp": "^0.5.1",
     "source-map-support": "^0.4.1",
     "ts-promise": "^0.3.4",
+    "typescript": "2.0.6",
     "ws": "^1.1.1",
     "yargs": "^4.7.1"
   },
