--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "npm run -s lint && npm run -s mocha",
     "mocha": "mocha -R spec dist/test/",
     "start": "node ./bin/mhub-server",
-    "lint": "tslint --format=verbose src/*.ts test/*.ts",
+    "lint": "tslint --format verbose src/*.ts test/*.ts",
     "build:src": "tsc -p src/",
     "watch:src": "tsc -p src/ --watch",
     "build:test": "tsc -p test/",
@@ -52,7 +52,7 @@
     "mocha": "^2.5.3",
     "parallelshell": "^2.0.0",
     "rimraf": "^2.6.1",
-    "tslint": "^3.12.1",
+    "tslint": "^5.5.0",
     "typescript": "^2.4.2"
   },
   "dependencies": {
