no unused parameters

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,6 +4,7 @@
 		"module": "commonjs",
 		"strict": true,
 		"noUnusedLocals": true,
+		"noUnusedParameters": true,
 		"isolatedModules": false,
 		"declaration": true,
 		"removeComments": false,
