package: Run build before lint, satisfy latest tslint and npm, add package lock, coverage and CI.

--- a/.npmignore
+++ b/.npmignore
@@ -2,6 +2,7 @@
 /support
 /test
 /dist/test
+/coverage/
 /typings
 /tsd.json
 /tslint.json
@@ -9,6 +10,7 @@
 /.gitattributes
 /.gitignore
 /.npmignore
+/.coveralls.yml
 /.travis.yml
 /.vscode/
 /todo.txt
