all: Switch to native promises.

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"target": "es5",
+		"target": "es6",
 		"module": "commonjs",
 		"strict": true,
 		"noUnusedLocals": true,
@@ -14,6 +14,12 @@
 		"outDir": "../dist/src/",
 		"types": [
 			"node"
+		],
+		"lib": [
+			"dom",
+			"es6",
+			"es2015.promise",
+			"es2018.promise"
 		]
 	}
 }
