all: Update build/test deps.

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "scripts": {
     "test": "npm run -s build && npm run -s lint && npm run -s mocha",
-    "mocha": "mocha -R spec dist/test/test-*.js dist/test/*/test-*.js",
-    "cover": "npm run -s build && npm run -s lint && istanbul cover --report json _mocha -- -R spec dist/test/test-*.js dist/test/*/test-*.js && remap-istanbul -i coverage/coverage-final.json -t html -o coverage/html-report",
+    "mocha": "mocha",
+    "cover": "npm run -s build && npm run -s lint && nyc npm -s mocha",
     "start": "node ./bin/mhub-server",
     "lint": "tslint --format verbose -p src/ && tslint --format verbose -p test/",
     "build:src": "tsc -p src/",
@@ -50,15 +50,15 @@
   },
   "homepage": "https://github.com/poelstra/mhub#readme",
   "devDependencies": {
-    "@types/chai": "^3.4.34",
+    "@types/chai": "^4.2.11",
     "@types/micromatch": "^4.0.1",
-    "@types/mocha": "^2.2.32",
-    "chai": "^3.5.0",
-    "coveralls": "^3.0.3",
-    "mocha": "^5.1.1",
-    "parallelshell": "^2.0.0",
-    "remap-istanbul": "^0.11.1",
-    "rimraf": "^2.6.1",
+    "@types/mocha": "^7.0.2",
+    "chai": "^4.2.0",
+    "coveralls": "^3.0.11",
+    "mocha": "^7.1.1",
+    "nyc": "^15.0.0",
+    "parallelshell": "^3.0.2",
+    "rimraf": "^3.0.2",
     "tslint": "^6.1.0",
     "typescript": "^3.8.3"
   },
