--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js:
-  - "10.15.3"
+  - "12.14.1"
 script:
   - "npm run -s cover"
 after_script:
-  - "./node_modules/.bin/remap-istanbul -i coverage/coverage-final.json -t lcovonly | ./node_modules/.bin/coveralls"
+  - "nyc report --reporter=text-lcov | coveralls"
