--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "test": "npm run -s build && npm run -s lint && npm run -s mocha",
     "mocha": "mocha",
-    "cover": "npm run -s build && npm run -s lint && nyc npm -s mocha",
+    "cover": "npm run -s build && npm run -s lint && nyc npm -s run mocha",
     "start": "node ./bin/mhub-server",
     "lint": "tslint --format verbose -p src/ && tslint --format verbose -p test/",
     "build:src": "tsc -p src/",
