--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
 			"program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
 			"args": [
 				"-u",
-				"tdd",
+				"bdd",
 				"--timeout",
 				"999999",
 				"--no-exit",
