--- a/package.json
+++ b/package.json
@@ -52,9 +52,11 @@
 	"homepage": "https://github.com/poelstra/mhub#readme",
 	"devDependencies": {
 		"@types/chai": "^4.2.11",
+		"@types/chai-as-promised": "^7.1.2",
 		"@types/micromatch": "^4.0.1",
 		"@types/mocha": "^7.0.2",
 		"chai": "^4.2.0",
+		"chai-as-promised": "^7.1.1",
 		"coveralls": "^3.0.11",
 		"mocha": "^7.1.1",
 		"nyc": "^15.0.0",
