--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
 		"@types/chai-as-promised": "^7.1.2",
 		"@types/micromatch": "^4.0.1",
 		"@types/mocha": "^7.0.2",
+		"@types/sinon": "^9.0.0",
+		"@types/sinon-chai": "^3.2.4",
 		"chai": "^4.2.0",
 		"chai-as-promised": "^7.1.1",
 		"coveralls": "^3.0.11",
@@ -63,6 +65,8 @@
 		"parallelshell": "^3.0.2",
 		"prettier": "^2.0.5",
 		"rimraf": "^3.0.2",
+		"sinon": "^9.0.2",
+		"sinon-chai": "^3.5.0",
 		"tslint": "^6.1.0",
 		"tslint-config-prettier": "^1.18.0",
 		"typescript": "^3.8.3"
