package: Switch from parallelshell (broken) to npm-run-all.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"mserver": "./bin/mhub-server"
 	},
 	"scripts": {
-		"test": "npm run -s build && npm run -s lint && npm run -s mocha",
+		"test": "npm-run-all build && npm lint && npm mocha",
 		"mocha": "mocha",
 		"cover": "npm run -s build && npm run -s lint && nyc npm -s run mocha",
 		"start": "node ./bin/mhub-server",
@@ -22,9 +22,10 @@
 		"watch:src": "tsc -p src/ --watch",
 		"build:test": "tsc -p test/",
 		"watch:test": "tsc -p test/ --watch",
-		"build": "npm run -s build:src && npm run -s build:test",
+		"build": "npm-run-all build:*",
 		"watch:start": "mkdir -p dist/src/ && touch dist/src/mhub-server.js && nodemon ./bin/mhub-server --delay 1 --watch dist/",
-		"watch": "parallelshell 'npm run -s watch:src' 'npm run -s watch:test' 'npm run -s watch:start'",
+		"watch:build": "npm-run-all --silent --parallel watch:src watch:test watch:start",
+		"watch": "npm-run-all --silent --parallel watch:build watch:start",
 		"clean": "rimraf dist",
 		"prepare": "npm run -s test",
 		"prepublishOnly": "npm run -s test",
@@ -61,8 +62,8 @@
 		"chai-as-promised": "^7.1.1",
 		"coveralls": "^3.0.11",
 		"mocha": "^7.1.1",
+		"npm-run-all": "^4.1.5",
 		"nyc": "^15.0.0",
-		"parallelshell": "^3.0.2",
 		"prettier": "^2.0.5",
 		"rimraf": "^3.0.2",
 		"sinon": "^9.0.2",
